<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Highway Mechanics</string>
    <string name="action_settings">Settings</string>
    <string name="main_icon">HM icon</string>
    <string name="text_signup">Sign Up</string>
    <string name="text_signin">Sign In</string>
    <string name="title_highway_mechanics">Highway Mechanics</string>
    <string name="title_activity_register">Register</string>
    <string name="user_name">Name</string>
    <string name="user_email">Email</string>
    <string name="user_password">Password</string>
    <string name="user_confirm_password">Confirm Password</string>
    <string name="button_user_register">Register</string>
    <string name="title_activity_user_sign_in">SignIn</string>
    <string name="user_login">Login</string>
    <string name="not_registered_text">Not Registered?</string>
    <string name="register_text">Sign Up</string>
    <string name="title_activity_mechanic">Mechanic</string>
    <string name="hello_world">Hello world!</string>
    <string name="logo">This is the logo of the app</string>
   <!--   <string name="app_name">Location API</string>-->
    <string name="lbl_you_are_at">YOU ARE AT</string>
    <string name="btn_get_location">GET MY LOCATION</string>
    <string name="btn_start_location_updates">START LOCATION UPDATES</string>
    <string name="btn_stop_location_updates">STOP LOCATION UPDATES</string>
    <string name="NextButton">NEXT-></string>
    <string name="title_activity_problem_list">ProblemList</string>
    <string name="Marker">Marker</string>
    <string name="some_text">Please Check the Problem!</string>
    <string name="CheckBox">CheckBox</string>
    <string name="TextView">TextView</string>
    <string name="Find_Some_Selected">Find Problems Selected</string>
     
</resources>
