<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/view_bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="info.androidhive.locationapi.start" >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:background="@color/white"
        android:contentDescription="@string/logo"
        android:maxWidth="@dimen/activity_horizontal_margin"
        android:minHeight="40dp"
        android:minWidth="40dp" 
        android:scaleType="fitCenter"
        android:src="@drawable/ourpic" />

    <Button
        android:id="@+id/SignUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:layout_margin="80dp"
        android:layout_marginTop="68dp"
        android:background="@color/white"
        android:text="@string/text_signup"
        android:textColor="@color/black"
        android:onClick="Register" />

    <Button
        android:id="@+id/SignInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/SignUpButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="88dp"
        android:background="@color/white"
        android:text="@string/text_signin"
        android:textColor="@color/black"
        android:onClick="Login" />

</RelativeLayout>